fix: Configure ESLint for @repo/ui package in Turborepo
- Add .eslintrc.json to packages/ui with proper Turborepo config
- Update lint script to target src directory specifically
- Resolves yarn lint failures when run from project root
- Enables proper ESLint integration across monorepo packages

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.tsx",
   "types": "./src/index.tsx",
   "scripts": {
-    "lint": "eslint . --max-warnings 0",
+    "lint": "eslint src --ext .ts,.tsx --max-warnings 0",
     "type-check": "tsc --noEmit"
   },
   "peerDependencies": {
