--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -74,4 +74,4 @@ ENV HOSTNAME="0.0.0.0"
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD node -e "require('http').get('http://localhost:3000', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
 
-CMD ["node", "apps/web/server.js"]
+CMD ["node", "server.js"]
