--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -7,20 +7,23 @@ on:
       - 'apps/web/**'
       - 'packages/**'
       - '.github/workflows/frontend-ci.yml'
+      - 'package.json'
+      - 'turbo.json'
   pull_request:
     branches: [main, nextjs]
     paths:
       - 'apps/web/**'
       - 'packages/**'
       - '.github/workflows/frontend-ci.yml'
-  release:
-    types: [published]
+      - 'package.json'
+      - 'turbo.json'
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}/web
   NODE_VERSION: '20'
-  CACHE_VERSION: v1
+  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+  TURBO_TEAM: ${{ vars.TURBO_TEAM }}
 
 permissions:
   contents: read
@@ -30,53 +33,61 @@ permissions:
   id-token: write
 
 jobs:
-  
-  # Code Quality & Security Analysis
-  code-quality:
-    name: Code Quality & Security
+  setup:
+    name: Setup & Cache
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-    
+    timeout-minutes: 10
     outputs:
       cache-key: ${{ steps.cache-key.outputs.key }}
-      
+    
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Full history for better analysis
-      
-      - name: Generate cache key
-        id: cache-key
-        run: |
-          echo "key=${{ env.CACHE_VERSION }}-${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/yarn.lock', 'package.json') }}" >> $GITHUB_OUTPUT
+          fetch-depth: 0
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'yarn'
-          cache-dependency-path: '**/yarn.lock'
       
-      - name: Cache node_modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            node_modules
-            apps/web/node_modules
-            packages/*/node_modules
-            ~/.cache/yarn
-          key: ${{ steps.cache-key.outputs.key }}
-          restore-keys: |
-            ${{ env.CACHE_VERSION }}-${{ runner.os }}-node-${{ env.NODE_VERSION }}-
+      - name: Generate cache key
+        id: cache-key
+        run: echo "key=node-${{ env.NODE_VERSION }}-${{ hashFiles('yarn.lock', 'package.json', 'apps/web/package.json') }}" >> $GITHUB_OUTPUT
       
       - name: Install dependencies
-        run: yarn install --frozen-lockfile --prefer-offline
+        run: yarn install --frozen-lockfile
+
+  lint:
+    name: Lint & Type Check
+    runs-on: ubuntu-latest
+    needs: setup
+    timeout-minutes: 10
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'yarn'
+      
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      
+      - name: Lint
+        run: yarn turbo lint --filter=web
+      
+      - name: Type check
+        run: yarn turbo type-check --filter=web
       
       - name: Run ESLint with SARIF output
         run: |
           cd apps/web
-          yarn lint --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif || echo "ESLint completed with warnings/errors"
+          yarn lint --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif
         continue-on-error: true
       
       - name: Upload ESLint SARIF
@@ -85,129 +96,20 @@ jobs:
         with:
           sarif_file: apps/web/eslint-results.sarif
           category: eslint
-        continue-on-error: true
-      
-      - name: Run TypeScript compilation
-        run: |
-          cd apps/web
-          yarn tsc --noEmit --incremental
-      
-      - name: Dependency vulnerability scan
-        run: |
-          cd apps/web
-          yarn audit --json > audit-results.json || true
-          yarn audit --level high --groups dependencies
-        continue-on-error: true
-      
-      - name: Upload audit results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: audit-results
-          path: apps/web/audit-results.json
-          retention-days: 7
 
-  
-  # Testing Pipeline
   test:
-    name: Test Suite
+    name: Test
     runs-on: ubuntu-latest
-    needs: code-quality
-    timeout-minutes: 20
+    needs: setup
+    timeout-minutes: 15
     
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
         test-type: [unit, integration]
       fail-fast: false
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
-      
-      - name: Cache node_modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            node_modules
-            apps/web/node_modules
-            packages/*/node_modules
-            ~/.cache/yarn
-          key: ${{ needs.code-quality.outputs.cache-key }}
-          restore-keys: |
-            ${{ env.CACHE_VERSION }}-${{ runner.os }}-node-${{ matrix.node-version }}-
-      
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile --prefer-offline
-      
-      - name: Run unit tests
-        if: matrix.test-type == 'unit'
-        run: |
-          cd apps/web
-          yarn test --coverage --watchAll=false --maxWorkers=2
-        env:
-          CI: true
-          NODE_ENV: test
-      
-      - name: Run integration tests
-        if: matrix.test-type == 'integration'
-        run: |
-          cd apps/web
-          yarn test:integration --watchAll=false
-        env:
-          CI: true
-          NODE_ENV: test
-        continue-on-error: true
-      
-      - name: Generate test report
-        if: always()
-        run: |
-          cd apps/web
-          yarn test --watchAll=false --reporters=jest-junit --outputFile=test-results.xml
-        env:
-          CI: true
-        continue-on-error: true
-      
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-results-${{ matrix.node-version }}-${{ matrix.test-type }}
-          path: |
-            apps/web/coverage/
-            apps/web/test-results.xml
-          retention-days: 7
-      
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        if: matrix.node-version == '20.x' && matrix.test-type == 'unit'
-        with:
-          files: ./apps/web/coverage/lcov.info
-          flags: frontend
-          name: frontend-coverage-${{ matrix.node-version }}
-          token: ${{ secrets.CODECOV_TOKEN }}
-          fail_ci_if_error: false
-
-  
-  # Build & Security Scanning
-  build:
-    name: Build Application
-    runs-on: ubuntu-latest
-    needs: [code-quality, test]
-    timeout-minutes: 20
-    
-    outputs:
-      image-tag: ${{ steps.meta.outputs.tags }}
-      image-digest: ${{ steps.build.outputs.digest }}
-      
-    steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
       
       - name: Setup Node.js
@@ -216,46 +118,142 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'yarn'
       
-      - name: Cache node_modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            node_modules
-            apps/web/node_modules
-            packages/*/node_modules
-            ~/.cache/yarn
-          key: ${{ needs.code-quality.outputs.cache-key }}
-      
       - name: Install dependencies
-        run: yarn install --frozen-lockfile --prefer-offline
+        run: yarn install --frozen-lockfile
       
-      - name: Build application
+      - name: Run unit tests
+        if: matrix.test-type == 'unit'
         run: |
           cd apps/web
-          yarn build
+          yarn test:coverage --maxWorkers=2 --watchAll=false
+        env:
+          CI: true
+      
+      - name: Run integration tests
+        if: matrix.test-type == 'integration'
+        run: |
+          cd apps/web
+          yarn test:integration --watchAll=false
+        env:
+          CI: true
+        continue-on-error: true
+      
+      - name: Upload coverage
+        if: matrix.test-type == 'unit'
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./apps/web/coverage/lcov.info
+          flags: frontend
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: false
+      
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-results-${{ matrix.test-type }}
+          path: |
+            apps/web/coverage/
+            apps/web/junit.xml
+          retention-days: 7
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    needs: [setup, lint, test]
+    timeout-minutes: 15
+    
+    outputs:
+      image-tag: ${{ steps.meta.outputs.tags }}
+      image-digest: ${{ steps.build.outputs.digest }}
+      
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'yarn'
+      
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      
+      - name: Build application
+        run: yarn turbo build --filter=web
         env:
           NODE_ENV: production
           NEXT_TELEMETRY_DISABLED: 1
       
-      - name: Analyze bundle size
-        run: |
-          cd apps/web
-          npx @next/bundle-analyzer || true
-        continue-on-error: true
-      
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
-        if: always()
         with:
           name: build-artifacts
           path: |
-            apps/web/.next/static/
-            apps/web/.next/standalone/
-          retention-days: 7
+            apps/web/.next/
+            !apps/web/.next/cache
+          retention-days: 1
+
+  security:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    needs: setup
+    timeout-minutes: 10
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'yarn'
+      
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      
+      - name: Audit dependencies
+        run: |
+          yarn audit --json > audit-results.json || true
+          yarn audit --level moderate --groups dependencies
         continue-on-error: true
+      
+      - name: Upload audit results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: audit-results
+          path: audit-results.json
+          retention-days: 7
+
+  docker:
+    name: Docker Build & Push
+    runs-on: ubuntu-latest
+    needs: [build, security]
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/nextjs')
+    timeout-minutes: 15
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifacts
+          path: apps/web/.next
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      
+      - name: Log in to Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Extract metadata
         id: meta
@@ -267,157 +265,27 @@ jobs:
             type=ref,event=pr
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
           labels: |
             org.opencontainers.image.title=Container Directory Web
             org.opencontainers.image.description=Next.js frontend for container directory
             org.opencontainers.image.vendor=broadsage
       
-      - name: Build Docker image
-        id: build
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./apps/web/Dockerfile
-          platforms: linux/amd64
-          push: false
+          platforms: linux/amd64,linux/arm64
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          load: true
-      
-      - name: Save Docker image
-        run: |
-          # Get the first tag from the metadata output
-          TAG=$(echo "${{ steps.meta.outputs.tags }}" | head -n1)
-          echo "Saving Docker image: $TAG"
-          docker save "$TAG" > /tmp/image.tar
-          ls -la /tmp/image.tar
-      
-      - name: Upload Docker image artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: docker-image
-          path: /tmp/image.tar
-          retention-days: 1
-
-  # Security Scanning
-  security-scan:
-    name: Security Scanning
-    runs-on: ubuntu-latest
-    needs: build
-    timeout-minutes: 15
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Download Docker image
-        uses: actions/download-artifact@v4
-        with:
-          name: docker-image
-          path: /tmp
-      
-      - name: Load Docker image
-        run: docker load --input /tmp/image.tar
-      
-      - name: Run Trivy vulnerability scanner
-        run: |
-          # Get the first tag from the loaded image
-          IMAGE_TAG=$(docker images --format "table {{.Repository}}:{{.Tag}}" | grep ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} | head -n1)
-          echo "Scanning image: $IMAGE_TAG"
-          
-          # Create output directory
-          mkdir -p ./trivy-output
-          
-          # Run Trivy with JSON format for detailed results with full paths
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
-            -v "$(pwd)/trivy-output:/output" \
-            aquasec/trivy:latest image --format json --output /output/trivy-results.json "$IMAGE_TAG" || true
-          
-          # Also run with table format for human-readable output
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
-            -v "$(pwd)/trivy-output:/output" \
-            aquasec/trivy:latest image --format table --output /output/trivy-results.txt "$IMAGE_TAG" || true
-          
-          # Verify files were created
-          ls -la ./trivy-output/
-        continue-on-error: true
-      
-      - name: Upload Trivy scan results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: trivy-results
-          path: |
-            trivy-output/trivy-results.json
-            trivy-output/trivy-results.txt
-          retention-days: 7
-        continue-on-error: true
-      
-      - name: Run Snyk container scan  
-        if: env.SNYK_TOKEN != ''
-        run: |
-          # Get the first tag from the loaded image
-          IMAGE_TAG=$(docker images --format "table {{.Repository}}:{{.Tag}}" | grep ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} | head -n1)
-          echo "Snyk scanning image: $IMAGE_TAG"
-          npx snyk container test "$IMAGE_TAG" --severity-threshold=high --file=apps/web/Dockerfile || true
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        continue-on-error: true
-
-  # Publish Docker Image
-  publish:
-    name: Publish Docker Image
-    runs-on: ubuntu-latest
-    needs: [build, security-scan]
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/nextjs')
-    timeout-minutes: 10
-    
-    steps:
-      - name: Download Docker image
-        uses: actions/download-artifact@v4
-        with:
-          name: docker-image
-          path: /tmp
-      
-      - name: Load Docker image
-        run: |
-          docker load --input /tmp/image.tar
-          echo "Available Docker images after loading:"
-          docker images
-      
-      - name: Log in to Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Push Docker image
-        id: push
-        run: |
-          # Get all tags for this image
-          TAGS=$(docker images --format "table {{.Repository}}:{{.Tag}}" | grep ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} | grep -v "<none>" || true)
-          
-          # Store the first tag for SBOM generation
-          FIRST_TAG=$(echo "$TAGS" | head -n1 | awk '{print $1}' | grep -v "REPOSITORY:TAG" || true)
-          echo "first-tag=$FIRST_TAG" >> $GITHUB_OUTPUT
-          
-          # Push each tag
-          echo "$TAGS" | while read -r tag; do
-            if [ ! -z "$tag" ] && [ "$tag" != "REPOSITORY:TAG" ]; then
-              echo "Pushing $tag"
-              docker push "$tag"
-            fi
-          done
       
       - name: Generate SBOM
         uses: anchore/sbom-action@v0
         with:
-          image: ${{ steps.push.outputs.first-tag }}
+          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
           format: spdx-json
           output-file: sbom.spdx.json
       
@@ -428,19 +296,19 @@ jobs:
           path: sbom.spdx.json
           retention-days: 30
 
-
-  # Deployment Readiness
-  deployment-readiness:
-    name: Deployment Readiness
+  summary:
+    name: Summary
     runs-on: ubuntu-latest
-    needs: [publish]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: [lint, test, build, security]
+    if: always()
     
     steps:
-      - name: Deployment readiness check
+      - name: Report Status
         run: |
-          echo "✅ All checks passed! Ready for deployment."
-          echo "🚀 Image published: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}"
-          echo "📦 SBOM generated and available in artifacts"
-          echo "🔒 Security scans completed"
-          echo "✨ Application built and tested successfully"
+          echo "## 🎯 Frontend CI Summary" >> $GITHUB_STEP_SUMMARY
+          echo "| Check | Status |" >> $GITHUB_STEP_SUMMARY
+          echo "|-------|--------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Lint & Type Check | ${{ needs.lint.result == 'success' && '✅' || '❌' }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Tests | ${{ needs.test.result == 'success' && '✅' || '❌' }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Build | ${{ needs.build.result == 'success' && '✅' || '❌' }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Security | ${{ needs.security.result == 'success' && '✅' || '❌' }} |" >> $GITHUB_STEP_SUMMARY
