--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -162,10 +162,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [setup, lint, test]
     timeout-minutes: 15
-    
-    outputs:
-      image-tag: ${{ steps.meta.outputs.tags }}
-      image-digest: ${{ steps.build.outputs.digest }}
       
     steps:
       - name: Checkout
@@ -185,15 +181,6 @@ jobs:
         env:
           NODE_ENV: production
           NEXT_TELEMETRY_DISABLED: 1
-      
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifacts
-          path: |
-            apps/web/.next/
-            !apps/web/.next/cache
-          retention-days: 1
 
   security:
     name: Security Scan
@@ -233,17 +220,26 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build, security]
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/nextjs')
-    timeout-minutes: 15
+    timeout-minutes: 20
     
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          name: build-artifacts
-          path: apps/web/.next
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'yarn'
+      
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      
+      - name: Build application
+        run: yarn turbo build --filter=web
+        env:
+          NODE_ENV: production
+          NEXT_TELEMETRY_DISABLED: 1
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
