fix: resolve SBOM generation image reference issue
- Use image digest instead of SHA tag for SBOM generation
- Add id to build step to capture digest output
- Fix 'snap file does not exist' error by referencing actual built image
- Ensure SBOM is generated against the correct pushed image

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -266,6 +266,7 @@ jobs:
             org.opencontainers.image.vendor=broadsage
       
       - name: Build and push Docker image
+        id: build
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -280,7 +281,7 @@ jobs:
       - name: Generate SBOM
         uses: anchore/sbom-action@v0
         with:
-          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}
           format: spdx-json
           output-file: sbom.spdx.json
       
