fix(ci): resolve issues in release workflow
- Add missing outputs for new-release-published and version
- Fix docker-release job to work with all branches (main, nextjs, develop)
- Use semantic-release outputs instead of reading package.json directly
- Fix SBOM generation to use image digest instead of tag
- Add proper release channel detection (latest, beta, alpha)
- Add security audit step before release
- Add timeout limits and better error handling
- Improve metadata and labeling for Docker images
- Add release summary job for better visibility
- Update action versions and add proper prerelease handling

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,13 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    timeout-minutes: 20
+    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
+    
+    outputs:
+      new-release-published: ${{ steps.semantic-release.outputs.new-release-published }}
+      new-release-version: ${{ steps.semantic-release.outputs.new-release-version }}
+      new-release-major-version: ${{ steps.semantic-release.outputs.new-release-major-version }}
     
     steps:
       - name: Checkout
@@ -47,9 +53,14 @@ jobs:
       - name: Test
         run: |
           cd apps/web
-          yarn test --coverage --watchAll=false
+          yarn test --coverage --watchAll=false --maxWorkers=2
         env:
           CI: true
+      
+      - name: Security audit
+        run: |
+          yarn audit --level moderate --groups dependencies
+        continue-on-error: true
       
       - name: Build
         run: yarn turbo build
@@ -58,6 +69,7 @@ jobs:
           NEXT_TELEMETRY_DISABLED: 1
       
       - name: Release
+        id: semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -66,14 +78,16 @@ jobs:
   docker-release:
     name: Docker Release
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     needs: release
-    if: github.ref == 'refs/heads/main' && needs.release.outputs.new-release-published == 'true'
+    if: needs.release.outputs.new-release-published == 'true'
     
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.sha }}
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -100,11 +114,22 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Get release version
-        id: version
+      - name: Determine release channel
+        id: channel
         run: |
-          VERSION=$(node -p "require('./package.json').version")
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+            echo "channel=latest" >> $GITHUB_OUTPUT
+            echo "prerelease=false" >> $GITHUB_OUTPUT
+          elif [[ "${{ github.ref }}" == "refs/heads/nextjs" ]]; then
+            echo "channel=beta" >> $GITHUB_OUTPUT
+            echo "prerelease=true" >> $GITHUB_OUTPUT
+          elif [[ "${{ github.ref }}" == "refs/heads/develop" ]]; then
+            echo "channel=alpha" >> $GITHUB_OUTPUT
+            echo "prerelease=true" >> $GITHUB_OUTPUT
+          else
+            echo "channel=edge" >> $GITHUB_OUTPUT
+            echo "prerelease=true" >> $GITHUB_OUTPUT
+          fi
       
       - name: Extract metadata
         id: meta
@@ -112,17 +137,22 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}/web
           tags: |
-            type=semver,pattern={{version}},value=v${{ steps.version.outputs.version }}
-            type=semver,pattern={{major}}.{{minor}},value=v${{ steps.version.outputs.version }}
-            type=semver,pattern={{major}},value=v${{ steps.version.outputs.version }}
-            type=raw,value=latest
+            type=semver,pattern={{version}},value=${{ needs.release.outputs.new-release-version }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ needs.release.outputs.new-release-version }}
+            type=semver,pattern={{major}},value=${{ needs.release.outputs.new-release-version }},enable={{is_default_branch}}
+            type=raw,value=${{ steps.channel.outputs.channel }}
+            type=sha,prefix={{branch}}-
           labels: |
             org.opencontainers.image.title=Container Directory Web
             org.opencontainers.image.description=Next.js frontend for container directory
             org.opencontainers.image.vendor=broadsage
-            org.opencontainers.image.version=${{ steps.version.outputs.version }}
+            org.opencontainers.image.version=${{ needs.release.outputs.new-release-version }}
+            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.created=${{ github.event.head_commit.timestamp }}
       
       - name: Build and push Docker image
+        id: docker-build
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -137,12 +167,40 @@ jobs:
       - name: Generate SBOM
         uses: anchore/sbom-action@v0
         with:
-          image: ghcr.io/${{ github.repository }}/web:${{ steps.version.outputs.version }}
+          image: ghcr.io/${{ github.repository }}/web@${{ steps.docker-build.outputs.digest }}
           format: spdx-json
           output-file: sbom.spdx.json
       
       - name: Upload SBOM to release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ steps.version.outputs.version }}
+          tag_name: v${{ needs.release.outputs.new-release-version }}
           files: sbom.spdx.json
+          prerelease: ${{ steps.channel.outputs.prerelease }}
+          make_latest: ${{ github.ref == 'refs/heads/main' }}
+
+  summary:
+    name: Release Summary
+    runs-on: ubuntu-latest
+    needs: [release, docker-release]
+    if: always()
+    
+    steps:
+      - name: Release Summary
+        run: |
+          echo "## 🚀 Release Summary" >> $GITHUB_STEP_SUMMARY
+          echo "| Item | Status |" >> $GITHUB_STEP_SUMMARY
+          echo "|------|--------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Release Job | ${{ needs.release.result == 'success' && '✅ Success' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
+          
+          if [[ "${{ needs.release.outputs.new-release-published }}" == "true" ]]; then
+            echo "| New Release | ✅ Published v${{ needs.release.outputs.new-release-version }} |" >> $GITHUB_STEP_SUMMARY
+            echo "| Docker Build | ${{ needs.docker-release.result == 'success' && '✅ Success' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "### 📦 Artifacts" >> $GITHUB_STEP_SUMMARY
+            echo "- **Git Tag**: v${{ needs.release.outputs.new-release-version }}" >> $GITHUB_STEP_SUMMARY
+            echo "- **Docker Image**: ghcr.io/${{ github.repository }}/web:${{ needs.release.outputs.new-release-version }}" >> $GITHUB_STEP_SUMMARY
+            echo "- **Release Notes**: [View Release](https://github.com/${{ github.repository }}/releases/tag/v${{ needs.release.outputs.new-release-version }})" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "| New Release | ⏭️ No release (no relevant changes) |" >> $GITHUB_STEP_SUMMARY
+          fi
