--- a/.releaserc.json
+++ b/.releaserc.json
@@ -2,11 +2,11 @@
   "branches": [
     "main",
     {
-      "name": "nextjs",
+      "name": "beta",
       "prerelease": "beta"
     },
     {
-      "name": "develop",
+      "name": "alpha", 
       "prerelease": "alpha"
     }
   ],
