--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,101 +95,20 @@ jobs:
 
   docker-release:
     name: Docker Release
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
     needs: release
     if: needs.release.outputs.new-release-published == 'true'
-    
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: ${{ github.sha }}
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'yarn'
-      
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      
-      - name: Build application
-        run: yarn turbo build --filter=web
-        env:
-          NODE_ENV: production
-          NEXT_TELEMETRY_DISABLED: 1
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      
-      - name: Log in to Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Determine release channel
-        id: channel
-        run: |
-          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
-            echo "channel=latest" >> $GITHUB_OUTPUT
-            echo "prerelease=false" >> $GITHUB_OUTPUT
-          else
-            echo "channel=edge" >> $GITHUB_OUTPUT
-            echo "prerelease=true" >> $GITHUB_OUTPUT
-          fi
-      
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository }}/web
-          tags: |
-            type=semver,pattern={{version}},value=${{ needs.release.outputs.new-release-version }}
-            type=semver,pattern={{major}}.{{minor}},value=${{ needs.release.outputs.new-release-version }}
-            type=semver,pattern={{major}},value=${{ needs.release.outputs.new-release-version }},enable={{is_default_branch}}
-            type=raw,value=${{ steps.channel.outputs.channel }}
-            type=sha,prefix={{branch}}-
-          labels: |
-            org.opencontainers.image.title=Container Directory Web
-            org.opencontainers.image.description=Next.js frontend for container directory
-            org.opencontainers.image.vendor=broadsage
-            org.opencontainers.image.version=${{ needs.release.outputs.new-release-version }}
-            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
-            org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.created=${{ github.event.head_commit.timestamp }}
-      
-      - name: Build and push Docker image
-        id: docker-build
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./apps/web/Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      
-      - name: Generate SBOM
-        uses: anchore/sbom-action@v0
-        with:
-          image: ghcr.io/${{ github.repository }}/web@${{ steps.docker-build.outputs.digest }}
-          format: spdx-json
-          output-file: sbom.spdx.json
-      
-      - name: Upload SBOM to release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: v${{ needs.release.outputs.new-release-version }}
-          files: sbom.spdx.json
-          prerelease: ${{ steps.channel.outputs.prerelease }}
-          make_latest: ${{ github.ref == 'refs/heads/main' }}
+    uses: ./.github/workflows/docker-ci.yml
+    permissions:
+      contents: read
+      packages: write
+      security-events: write
+      id-token: write
+      attestations: write
+    with:
+      platforms: '["linux/amd64", "linux/arm64"]'
+      push: true
+      tag: ${{ needs.release.outputs.new-release-version }}
+    secrets: inherit
 
   summary:
     name: Release Summary
