--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,27 +93,10 @@ jobs:
             yarn release
           fi
 
-  docker-release:
-    name: Docker Release
-    needs: release
-    if: needs.release.outputs.new-release-published == 'true'
-    uses: ./.github/workflows/docker-ci.yml
-    permissions:
-      contents: read
-      packages: write
-      security-events: write
-      id-token: write
-      attestations: write
-    with:
-      platforms: '["linux/amd64", "linux/arm64"]'
-      push: true
-      tag: ${{ needs.release.outputs.new-release-version }}
-    secrets: inherit
-
   summary:
     name: Release Summary
     runs-on: ubuntu-latest
-    needs: [release, docker-release]
+    needs: [release]
     if: always()
     
     steps:
@@ -126,11 +109,9 @@ jobs:
           
           if [[ "${{ needs.release.outputs.new-release-published }}" == "true" ]]; then
             echo "| New Release | ✅ Published v${{ needs.release.outputs.new-release-version }} |" >> $GITHUB_STEP_SUMMARY
-            echo "| Docker Build | ${{ needs.docker-release.result == 'success' && '✅ Success' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "### 📦 Artifacts" >> $GITHUB_STEP_SUMMARY
             echo "- **Git Tag**: v${{ needs.release.outputs.new-release-version }}" >> $GITHUB_STEP_SUMMARY
-            echo "- **Docker Image**: ghcr.io/${{ github.repository }}/web:${{ needs.release.outputs.new-release-version }}" >> $GITHUB_STEP_SUMMARY
             echo "- **Release Notes**: [View Release](https://github.com/${{ github.repository }}/releases/tag/v${{ needs.release.outputs.new-release-version }})" >> $GITHUB_STEP_SUMMARY
           else
             echo "| New Release | ⏭️ No release (no relevant changes) |" >> $GITHUB_STEP_SUMMARY
