--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "husky": "^9.1.6",
     "prettier": "^3.2.5",
     "semantic-release": "^24.2.0",
-    "turbo": "^2.3.3"
+    "turbo": "^2.3.3",
+    "@turbo/gen": "^2.5.8"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
