--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "type-check": "turbo run type-check",
     "clean": "turbo run clean && rm -rf node_modules/.cache .turbo",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "gen": "turbo gen init",
     "release": "semantic-release",
     "release:dry-run": "semantic-release --dry-run",
     "prepare": "husky"
